Fixed webpack bugs
- Fixed webpack css naming
- Fixed assetmanifest creation when using HMR
- Additional .env.example configs

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,11 @@
 APP_NAME=laravel_webpack_react_boilerplate
+# ** APP_SHORT_NAME set short name for your app to be used as prefix and folder names
+APP_SHORT_NAME=lwr
 APP_KEY=
 # ** APP_DEBUG set to false in production
 APP_DEBUG=false
 # * APP_SERVICE set the service to be used when running sail command
-APP_SERVICE=lwr
+APP_SERVICE=${APP_SHORT_NAME}
 # ** APP_URL set if you have setup in hostfile to access localhost using different URL, empty in production
 APP_URL=localhost
 # * APP_PORT set to which port you want to access your app in local
@@ -18,15 +20,16 @@ FORWARD_MAILHOG_DASHBOARD_PORT=8084
 
 # * WPDS_PORT set preffered port for webpack-dev-server in local
 WPDS_PORT=8085
+WPDS_MOBILE_PORT=8087
 WPDS_HTTPS=false
 
 # * WP_CSS_PREFIX set preffered prefix for all css class assigned by webpack
-WP_CSS_PREFIX=lwr
+WP_CSS_PREFIX=${APP_SHORT_NAME}
 
 # * ASSET_DEDICATED_URL asset URL, for development use only
 ASSET_DEDICATED_URL=//${APP_URL}:${WPDS_PORT}
 # * ASSET_PATH folder where built assets will be stored
-ASSET_PATH=/lwr
+ASSET_PATH=/${APP_SHORT_NAME}
 
 # * Change this if not using root wsl user, check the actual user id using command 'id <username>' in wsl
 WWWUSER=0
@@ -35,7 +38,7 @@ WWWUSER=0
 NPM_CACHE=/var/www/html/npm/cache
 
 #** LANG_KEY language cookie key
-LANG_KEY=lwr_lang
+LANG_KEY=${APP_SHORT_NAME}_lang
 
 
 LOG_CHANNEL=app
