--- a/docker/dev/shared/docker-compose.yml
+++ b/docker/dev/shared/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       MYSQL_PASSWORD: '${DB_PASSWORD}'
       MYSQL_ALLOW_EMPTY_PASSWORD: 'yes'
     volumes:
-      - 'sailmysql:/var/lib/mysql'
+      - 'lwrmysql:/var/lib/mysql'
     networks:
       - sail
     healthcheck:
@@ -23,7 +23,7 @@ services:
     ports:
       - '${FORWARD_REDIS_PORT:-6379}:6379'
     volumes:
-      - 'sailredis:/data'
+      - 'lwrredis:/data'
     networks:
       - sail
     healthcheck:
@@ -35,9 +35,7 @@ networks:
     name: lwr_network
 
 volumes:
-  sailmysql:
+  lwrmysql:
     driver: local
-  sailredis:
-    driver: local
-  sailmeilisearch:
+  lwrredis:
     driver: local
