Default DB user
Replaced custom user instead of 'root' for default DB user, this is to prevent conflict in local with newly created MYSQL container

--- a/.env.example
+++ b/.env.example
@@ -53,8 +53,10 @@ DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=laravel_webpack_react_boilerplate
-DB_USERNAME=root
-DB_PASSWORD=
+# ** DB_USERNAME change to your own user
+# ** dont use 'root' in local to prevent conflict on newly created MYSQL container
+DB_USERNAME=lwr
+DB_PASSWORD=asdf1234*
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
