Redis default host
Updated default redis host in .env.example to prevent redis connection error

--- a/.env.example
+++ b/.env.example
@@ -70,7 +70,7 @@ MEMCACHED_HOST=127.0.0.1
 # * FORWARD_REDIS_PORT set which port you want to access docker db service in local
 FORWARD_REDIS_PORT=8086
 
-REDIS_HOST=127.0.0.1
+REDIS_HOST=redis
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
